--- a/oefening/public/index.html
+++ b/oefening/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-  
+    <script src="https://kit.fontawesome.com/c0f300cdb4.js" crossorigin="anonymous"></script>
     <title>Oefening</title>
   </head>
   <body>
